Switch from qt5 to qt6
Mostly a search/replace on Qt5 -> Qt6 plus some minor changes to make
build correctly.

Tested on app using qt-runner and appears to work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ option(enable-glib "Build GLib support" ON)
 
 option(enable-xcb "Compile with xcb support" ON)
 option(enable-wayland "Compile with support for wayland" ON)
-option(enable-qt5-inputcontext "Compile with Qt5 input context" ON)
+option(enable-qt6-inputcontext "Compile with Qt6 input context" ON)
 
 option(enable-hwkeyboard "Enable support for the hardware keyboard" ON)
 option(enable-dbus-activation "Enable dbus activation support for maliit-server" OFF)
@@ -19,14 +19,14 @@ option(enable-dbus-activation "Enable dbus activation support for maliit-server"
 # Install paths
 include(GNUInstallDirs)
 
-if(NOT DEFINED QT5_PLUGINS_INSTALL_DIR)
-    set(QT5_PLUGINS_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/qt5/plugins" CACHE PATH
-            "Installation directory for Qt 5 plugins [LIB_INSTALL_DIR/qt5/plugins]")
+if(NOT DEFINED QT6_PLUGINS_INSTALL_DIR)
+    set(QT6_PLUGINS_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/qt6/plugins" CACHE PATH
+            "Installation directory for Qt 6 plugins [LIB_INSTALL_DIR/qt6/plugins]")
 endif()
 
-if(NOT DEFINED QT5_MKSPECS_INSTALL_DIR)
-    set(QT5_MKSPECS_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/qt5/mkspecs" CACHE PATH
-            "Installation directory for Qt 5 mkspecs files [LIB_INSTALL_DIR/qt5/mkspecs]")
+if(NOT DEFINED QT6_MKSPECS_INSTALL_DIR)
+    set(QT6_MKSPECS_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}/qt6/mkspecs" CACHE PATH
+            "Installation directory for Qt 6 mkspecs files [LIB_INSTALL_DIR/qt6/mkspecs]")
 endif()
 
 if(NOT DEFINED GTK3_PLUGINS_INSTALL_DIR)
@@ -38,20 +38,21 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
+set(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} -fPIC")
 
 find_package(PkgConfig REQUIRED)
 
-find_package(Qt5Core)
-find_package(Qt5DBus)
-find_package(Qt5Gui REQUIRED PRIVATE)
-find_package(Qt5Quick)
-find_package(Qt5Widgets)
+find_package(Qt6Core)
+find_package(Qt6DBus)
+find_package(Qt6Gui REQUIRED PRIVATE)
+find_package(Qt6Quick)
+find_package(Qt6Widgets)
 
 if(enable-wayland)
     find_package(WaylandProtocols REQUIRED PRIVATE)
     find_package(QtWaylandScanner REQUIRED)
     find_package(Wayland REQUIRED)
-    find_package(Qt5WaylandClient REQUIRED PRIVATE)
+    find_package(Qt6WaylandClient REQUIRED PRIVATE)
 
     find_package(Gtk3)
 endif()
@@ -63,7 +64,7 @@ add_library(maliit-common STATIC
             common/maliit/namespaceinternal.h
             common/maliit/settingdata.cpp
             common/maliit/settingdata.h)
-target_link_libraries(maliit-common Qt5::Core)
+target_link_libraries(maliit-common Qt6::Core)
 target_include_directories(maliit-common PUBLIC common)
 
 set(CONNECTION_SOURCES
@@ -98,20 +99,20 @@ endif()
 set_source_files_properties(dbus_interfaces/minputmethodcontext1interface.xml dbus_interfaces/minputmethodserver1interface.xml
                             PROPERTIES INCLUDE maliit/settingdata.h)
 
-qt5_add_dbus_adaptor(CONNECTION_SOURCES dbus_interfaces/minputmethodcontext1interface.xml dbusserverconnection.h DBusServerConnection)
-qt5_add_dbus_adaptor(CONNECTION_SOURCES dbus_interfaces/minputmethodserver1interface.xml dbusinputcontextconnection.h DBusInputContextConnection)
+qt6_add_dbus_adaptor(CONNECTION_SOURCES dbus_interfaces/minputmethodcontext1interface.xml dbusserverconnection.h DBusServerConnection)
+qt6_add_dbus_adaptor(CONNECTION_SOURCES dbus_interfaces/minputmethodserver1interface.xml dbusinputcontextconnection.h DBusInputContextConnection)
 
-qt5_add_dbus_interface(CONNECTION_SOURCES dbus_interfaces/minputmethodcontext1interface.xml minputmethodcontext1interface_interface)
-qt5_add_dbus_interface(CONNECTION_SOURCES dbus_interfaces/minputmethodserver1interface.xml minputmethodserver1interface_interface)
+qt6_add_dbus_interface(CONNECTION_SOURCES dbus_interfaces/minputmethodcontext1interface.xml minputmethodcontext1interface_interface)
+qt6_add_dbus_interface(CONNECTION_SOURCES dbus_interfaces/minputmethodserver1interface.xml minputmethodserver1interface_interface)
 
 add_library(maliit-connection STATIC ${CONNECTION_SOURCES})
-target_link_libraries(maliit-connection Qt5::Core Qt5::DBus Qt5::Gui maliit-common)
+target_link_libraries(maliit-connection Qt6::Core Qt6::DBus Qt6::Gui maliit-common)
 if(enable-wayland)
     target_link_libraries(maliit-connection Wayland::Client)
 endif()
 target_include_directories(maliit-connection PUBLIC connection)
 
-include_directories(${Qt5Gui_PRIVATE_INCLUDE_DIRS})
+include_directories(${Qt6Gui_PRIVATE_INCLUDE_DIRS})
 
 set(PLUGINS_SOURCES
     src/maliit/plugins/abstractinputmethod.cpp
@@ -214,7 +215,7 @@ endif()
 
 add_library(maliit-plugins SHARED ${PLUGINS_SOURCES} ${PLUGINS_HEADER})
 target_link_libraries(maliit-plugins PRIVATE maliit-common maliit-connection ${PLUGINS_LIBRARIES})
-target_link_libraries(maliit-plugins PUBLIC Qt5::Core Qt5::Gui Qt5::Quick)
+target_link_libraries(maliit-plugins PUBLIC Qt6::Core Qt6::Gui Qt6::Quick)
 target_include_directories(maliit-plugins PRIVATE ${PLUGINS_INCLUDE_DIRS})
 
 set_target_properties(maliit-plugins PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR}
@@ -289,14 +290,14 @@ add_definitions(-DMALIIT_FRAMEWORK_USE_INTERNAL_API
 add_executable(maliit-server passthroughserver/main.cpp)
 target_link_libraries(maliit-server maliit-plugins maliit-connection)
 
-if(enable-qt5-inputcontext)
+if(enable-qt6-inputcontext)
     set(INPUT_CONTEXT_SOURCES
             input-context/main.cpp
             input-context/minputcontext.cpp
             input-context/minputcontext.h)
 
     add_library(maliitplatforminputcontextplugin MODULE ${INPUT_CONTEXT_SOURCES})
-    target_link_libraries(maliitplatforminputcontextplugin maliit-connection Qt5::Quick)
+    target_link_libraries(maliitplatforminputcontextplugin maliit-connection Qt6::Quick)
 endif()
 
 if(enable-wayland)
@@ -308,8 +309,8 @@ if(enable-wayland)
     ecm_add_qtwayland_client_protocol(INPUT_PANEL_SHELL_SOURCES PROTOCOL ${WAYLANDPROTOCOLS_PATH}/unstable/input-method/input-method-unstable-v1.xml BASENAME input-method-unstable-v1)
 
     add_library(inputpanel-shell MODULE ${INPUT_PANEL_SHELL_SOURCES})
-    target_link_libraries(inputpanel-shell Qt5::WaylandClient)
-    target_include_directories(inputpanel-shell PRIVATE ${Qt5WaylandClient_PRIVATE_INCLUDE_DIRS})
+    target_link_libraries(inputpanel-shell Qt6::WaylandClient)
+    target_include_directories(inputpanel-shell PRIVATE ${Qt6WaylandClient_PRIVATE_INCLUDE_DIRS})
 
     if(TARGET Gtk3::Gtk)
         add_library(im-wayland MODULE
@@ -326,21 +327,21 @@ add_executable(maliit-exampleapp-plainqt
         examples/apps/plainqt/mainwindow.cpp
         examples/apps/plainqt/mainwindow.h
         examples/apps/plainqt/plainqt.cpp)
-target_link_libraries(maliit-exampleapp-plainqt Qt5::Gui Qt5::Widgets)
+target_link_libraries(maliit-exampleapp-plainqt Qt6::Gui Qt6::Widgets)
 
 add_library(cxxhelloworldplugin MODULE
         examples/plugins/cxx/helloworld/helloworldinputmethod.cpp
         examples/plugins/cxx/helloworld/helloworldinputmethod.h
         examples/plugins/cxx/helloworld/helloworldplugin.cpp
         examples/plugins/cxx/helloworld/helloworldplugin.h)
-target_link_libraries(cxxhelloworldplugin maliit-plugins Qt5::Widgets)
+target_link_libraries(cxxhelloworldplugin maliit-plugins Qt6::Widgets)
 
 add_library(cxxoverrideplugin MODULE
             examples/plugins/cxx/override/overrideinputmethod.cpp
             examples/plugins/cxx/override/overrideinputmethod.h
             examples/plugins/cxx/override/overrideplugin.cpp
             examples/plugins/cxx/override/overrideplugin.h)
-target_link_libraries(cxxoverrideplugin maliit-plugins Qt5::Widgets)
+target_link_libraries(cxxoverrideplugin maliit-plugins Qt6::Widgets)
 
 file(COPY examples/plugins/qml/helloworld/helloworld.qml
      DESTINATION ${CMAKE_BINARY_DIR}/examples/plugins/qml/helloworld)
@@ -401,7 +402,7 @@ install(FILES src/mimserver.h
 install(FILES ${CMAKE_BINARY_DIR}/maliit-framework.pc ${CMAKE_BINARY_DIR}/maliit-plugins.pc ${CMAKE_BINARY_DIR}/maliit-server.pc
         DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
 install(FILES ${CMAKE_BINARY_DIR}/maliit-framework.prf ${CMAKE_BINARY_DIR}/maliit-plugins.prf ${CMAKE_BINARY_DIR}/maliit-defines.prf
-        DESTINATION ${QT5_MKSPECS_INSTALL_DIR}/features)
+        DESTINATION ${QT6_MKSPECS_INSTALL_DIR}/features)
 
 install(EXPORT MaliitPluginsTargets FILE MaliitPluginsTargets.cmake DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/MaliitPlugins)
 install(FILES ${CMAKE_CURRENT_BINARY_DIR}/MaliitPluginsConfig.cmake ${CMAKE_CURRENT_BINARY_DIR}/MaliitPluginsConfigVersion.cmake
@@ -437,13 +438,13 @@ if(enable-glib)
     install(FILES ${CMAKE_BINARY_DIR}/maliit-glib.pc DESTINATION ${CMAKE_INSTALL_LIBDIR}/pkgconfig)
 endif()
 
-if(enable-qt5-inputcontext)
-    install(TARGETS maliitplatforminputcontextplugin LIBRARY DESTINATION ${QT5_PLUGINS_INSTALL_DIR}/platforminputcontext)
+if(enable-qt6-inputcontext)
+    install(TARGETS maliitplatforminputcontextplugin LIBRARY DESTINATION ${QT6_PLUGINS_INSTALL_DIR}/platforminputcontext)
 endif()
 
 if(enable-wayland)
     install(TARGETS inputpanel-shell
-            LIBRARY DESTINATION ${QT5_PLUGINS_INSTALL_DIR}/wayland-shell-integration)
+            LIBRARY DESTINATION ${QT6_PLUGINS_INSTALL_DIR}/wayland-shell-integration)
     if(TARGET Gtk3::Gtk)
         install(TARGETS im-wayland
                 LIBRARY DESTINATION ${GTK3_PLUGINS_INSTALL_DIR}/immodules)
@@ -466,7 +467,7 @@ endif()
 if(enable-tests)
     enable_testing()
 
-    find_package(Qt5Test)
+    find_package(Qt6Test)
 
     set(TEST_PLUGINS_DIR ${CMAKE_BINARY_DIR}/tests/plugins)
 
@@ -507,7 +508,7 @@ if(enable-tests)
             tests/utils/core-utils.h
             tests/utils/gui-utils.cpp
             tests/utils/gui-utils.h)
-    target_link_libraries(test-utils PUBLIC Qt5::Core Qt5::Gui Qt5::Test maliit-connection)
+    target_link_libraries(test-utils PUBLIC Qt6::Core Qt6::Gui Qt6::Test maliit-connection)
     target_include_directories(test-utils INTERFACE tests/utils)
     target_compile_definitions(test-utils PUBLIC
             -DMALIIT_TEST_PLUGINS_DIR="${CMAKE_INSTALL_PREFIX}/lib/maliit-framework-tests/plugins"
@@ -518,7 +519,7 @@ if(enable-tests)
             tests/stubs/mkeyboardstatetracker_stub.h
             tests/stubs/fakeproperty.cpp
             tests/stubs/fakeproperty.h)
-    target_link_libraries(test-stubs PUBLIC Qt5::Core)
+    target_link_libraries(test-stubs PUBLIC Qt6::Core)
     target_include_directories(test-stubs INTERFACE tests/stubs)
 
     function(create_test name)
